# ai-selector

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  agent-execution.log.example  agent.env.example  justfile  logo.txt  main.py  pyproject.toml
src/: __init__.py  config.py  executor.py  main.py  selector.py
tests/: test_config.py  test_executor.py  test_main.py  test_selector.py
