[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-selector"
version = "0.3.0"
description = "Interactive CLI tool for managing and executing multiple AI agents"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [{ name = "Ramñón Pin", email = "ramon.pin@gmail.com" }]
keywords = ["ai", "cli", "agent", "selector", "interactive", "tool"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.13",
  "Environment :: Console",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
  "Topic :: Utilities",
]
dependencies = ["python-dotenv>=1.2.1", "questionary>=2.1.1"]

[project.urls]
Homepage = "https://github.com/ramonpin/ai-selector"
Repository = "https://github.com/ramonpin/ai-selector.git"
Issues = "https://github.com/ramonpin/ai-selector/issues"

[project.scripts]
ai-selector = "src.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build.targets.wheel.force-include]
"logo.txt" = "logo.txt"

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pre-commit>=4.3.0",
    "ruff>=0.14.3",
    "pytest>=8.3.2",
    "pytest-cov>=5.0.0",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "D"]
ignore = ["D100", "D104", "D107", "D203", "D213"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.13"
disallow_untyped_defs = true
disallow_incomplete_defs = true
